--- a/app/src/main/res/layout/activity_search_item.xml
+++ b/app/src/main/res/layout/activity_search_item.xml
@@ -16,6 +16,7 @@
         app:navigationIcon="@drawable/ic_arrow_back">
 
         <EditText
+            android:id="@+id/searchItem"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginEnd="34dp" />
@@ -32,6 +33,7 @@
     <include
         android:id="@+id/loadingView"
         layout="@layout/loading_view"
+        android:visibility="gone"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/resultList"
