find specific product

--- a/app/src/main/res/layout/item_view_holder.xml
+++ b/app/src/main/res/layout/item_view_holder.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/holderContainer"
     android:background="@drawable/ml_card"
     android:layout_margin="5dp"
     android:padding="10dp"
