--- a/app/src/main/res/layout/activity_search_item.xml
+++ b/app/src/main/res/layout/activity_search_item.xml
@@ -6,14 +6,9 @@
     android:id="@+id/viewContainer"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="?android:actionBarSize"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_arrow_back"/>
+    <include
+        android:id="@+id/simpleToolbar"
+        layout="@layout/simple_toolbar"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/resultList"
@@ -24,7 +19,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/simpleToolbar" />
 
     <include
         android:id="@+id/loadingView"
@@ -35,6 +30,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/resultList"
         app:layout_constraintEnd_toEndOf="@+id/resultList"
         app:layout_constraintStart_toStartOf="@+id/resultList"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/simpleToolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
