--- a/app/src/main/res/layout/activity_specific_product.xml
+++ b/app/src/main/res/layout/activity_specific_product.xml
@@ -7,14 +7,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="?android:actionBarSize"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_arrow_back" />
+    <include
+        android:id="@+id/simpleToolbar"
+        layout="@layout/simple_toolbar"/>
 
     <TextView
         android:id="@+id/productTitle"
@@ -22,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/simpleToolbar"
         tools:text="Zapatillas Adiddas"/>
 
     <ImageView
