--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,13 @@
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
         <item name="android:textCursorDrawable">@drawable/ml_cursor</item>
     </style>
+
+    <style name="Widget.ML.Button" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_margin">20dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/button_background</item>
+    </style>
 </resources>
